Fix: Resolved dependency conflict and updated MongoDB password setup.

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="placement_prep_db"
-CORS_ORIGINS="*"
-JWT_SECRET="your-secret-key-change-this-in-production"
+MONGO_URL=mongodb+srv://tejkonda_db_user:1lLTtftx3f1qBl5R@cluster0.hl0lsgv.mongodb.net/placement_prep_db?retryWrites=true&w=majority
+DB_NAME=placement_prep_db
+CORS_ORIGINS=*
+JWT_SECRET=your-secret-key-change-this-in-production
 EMERGENT_LLM_KEY=sk-emergent-57333Ab125dD447F5C
